--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,12 +17,12 @@
     </div>
     <div class="row">
         <div class="mx-auto text-center" style=" margin: 5% auto;    width: 100%;">
-            <h1 class="lead" style="font-size:1.5vw; ">Click here</h1>
+            <h1 class="lead" style="font-size:22px; ">Click here</h1>
             <div class="sonar-wrapper">
                 <div class="sonar-emitter">
                     <div class="sonar-wave"></div>
-                    <a class="anchor" href="/home#sectionteam">
-                        <img src="./assets/img/down.png" style="width:4vw;">
+                    <a class="anchor" (click)="scollTo('#sectionteam')">
+                        <img src="./assets/img/down.png" style="width:4vw; cursor: pointer;">
                     </a>
                 </div>
             </div>
