--- a/src/app/member/member-create/member-create.component.css
+++ b/src/app/member/member-create/member-create.component.css
@@ -1,6 +1,6 @@
 .border-info {
     background: white;
-    border: 2px solid #47bdcd40 !important;
+    border: 0.5px solid #47bdcd !important;
 }
 
 .img-display {
