--- a/src/app/member/member-detail/member-detail.component.css
+++ b/src/app/member/member-detail/member-detail.component.css
@@ -1,6 +1,6 @@
 .border-info {
     background: white;
-    border: 2px solid #47bdcd40 !important;
+    border: 0.5px solid #47bdcd !important;
 }
 
 .img-display {
@@ -67,7 +67,7 @@
 
 .btn-group .btn-info-edit {
     background: transparent;
-    color: #358CC2;
+    color: #47bdcd;
     padding: 2px 10px;
     cursor: pointer;
     font-size: 0.9rem;
@@ -77,7 +77,7 @@
 }
 .btn-group .btn-info-edit:hover {
     background: transparent;
-    color: #358CC2;
+    color: #47bdcd;
 }
 
 .circle {
@@ -95,7 +95,7 @@
 }
 
 .circle-edit {
-    background: #358CC2;
+    background: #47bdcd;
 }
 
 .box-two-line {
@@ -179,6 +179,9 @@
         margin-top: 20px; 
         margin-bottom: 15px;
     }
+    /*#sizeofDetail{
+        min-height: 100vw;
+    }*/
 
     .box-pic {
         max-width: 200px; 
@@ -191,4 +194,8 @@
     .box-pic {
         max-width: none; 
     }
+}
+
+#BarColor{
+    min-height: 27rem;
 }
