--- a/src/app/member/member-detail/member-detail.component.html
+++ b/src/app/member/member-detail/member-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container  border-info" style="margin-top: 10px;">
-    <div class="row" style="min-height: 550px;">
+    <div class="row" style="min-height: 27rem;">
         <div class="col-11 align-items-center">
             <!-- <div class="row">
         <div class="col navbar-header">
@@ -106,15 +106,21 @@
               <span class="custom-control-description">
                 Acknowledgement
               </span>
+            
             </label>
                     </div>
+                    
+                    
 
+                </div>
+                <div class="row">
+                      <hr color = ffffff>
                 </div>
 
             </div>
 
         </div>
-        <div class="col-1" style="background-color: #559CCA;">
+        <div class="col-1" style="background-color: #47bdcd;" id ="BarColor">
 
         </div>
     </div>
