--- a/src/app/member/member-edit/member-edit.component.css
+++ b/src/app/member/member-edit/member-edit.component.css
@@ -1,6 +1,6 @@
 .border-info {
     background: white;
-    border: 2px solid #47bdcd40 !important;
+    border: 0.5px solid #47bdcd !important;
 }
 
 .img-display {
@@ -64,7 +64,7 @@
 
 .btn-group .btn-info {
     background: #C0DDED;
-    color: #358CC2;
+    color: #47bdcd;;
     padding: 2px 10px;
     cursor: pointer;
     font-size: 0.9rem;
@@ -74,7 +74,7 @@
 }
 .btn-group .btn-info:hover {
     background: #C0DDED;
-    color: #358CC2;
+    color: #47bdcd;
     cursor: default;
 }
 
@@ -90,7 +90,7 @@
 
 
 .circle-edit {
-    background: #358CC2;
+    background: #47bdcd;
 }
 
 .btn {
