--- a/src/app/member/member-edit/member-edit.component.html
+++ b/src/app/member/member-edit/member-edit.component.html
@@ -111,7 +111,7 @@
             </div>
 
         </div>
-        <div class="col-1" style="background-color: #559CCA;">
+        <div class="col-1" style="background-color: #47bdcd;" id ="BarColor">
 
         </div>
     </div>
