--- a/src/app/member/member.component.css
+++ b/src/app/member/member.component.css
@@ -1,5 +1,5 @@
 .sub-header {
-    margin-top: 0;
+    margin-top: 44px;
     padding: 0;
 }
 
@@ -153,7 +153,7 @@ body .team-member ::-webkit-scrollbar-thumb {
 
 
 @media screen and (min-width: 1920px), screen and (min-height: 974px) {
-    /* .sub-header {
+    .sub-header {
         margin-top: 44px;
-    } */
+    }
 }
