--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
 <!--<app-team></app-team>-->
 <!--<app-card>  </app-card>-->
 
-<br>
+<article>
 <router-outlet></router-outlet>
+</article>
 <div class="container">
 
 	<div class="modal fade" id="myModal" role="dialog">
