--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -125,7 +125,7 @@
 }
 
 .sub-header {
-    margin-top: 44px;
+    margin-top: 0;
     padding: 0;
 }
 
@@ -401,9 +401,9 @@ screen and (min-height: 918px) {
 
 @media screen and (min-width: 1920px),
 screen and (min-height: 974px) {
-    .sub-header {
+    /* .sub-header {
         margin-top: 44px;
-    }
+    } */
     .sub-header .navbar {
         margin-bottom: 30px;
     }
